--- a/portfolio.css
+++ b/portfolio.css
@@ -357,7 +357,7 @@ ul li a{
 .about-text h2{
     color: white;
     font-size: 10px;
-}
+    margin-bottom: 10px;
 .about-text h5{
     color: white;
     font-size: 6px;
