--- a/portfolio.css
+++ b/portfolio.css
@@ -176,9 +176,9 @@ button:hover{
 }
 .title h2{
 color: white;
-font-size: 75px;
-width: 1130px;
-margin: 30px auto;
+font-size: 15px;
+width: 100%;
+margin: 10px auto;
 text-align: center;
 }
 .box{
